--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
-    <link rel="icon" type="image/png" href="{{url_for('static', filename='img/433-github.png')}}"" sizes=" 64x64">
+    <link rel="icon" type="image/png" href="{{url_for('static', filename='img/433-github.png')}}" sizes=" 64x64">
 </head>
 
 <body>
