--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,15 +20,21 @@
                 <li><a href="/principal"><span class="primero"><img
                                 src="{{url_for('static', filename='img/PNG/64px/001-home.png')}}"
                                 class="icon"></span>Inicio</a></li>
-                <li><a href="#"><span class="segundo"><i class="icon icon-map"></i></span>Categorías</a>
+                <li><a href="#"><span class="segundo"><img
+                                src="{{url_for('static', filename='img/PNG/64px/433-github.png')}}"
+                                class="icon"></span>Categorías</a>
                     <ul>
                         <li><a href="categorias/camara.html"><span class="uno"><img
-                                        src="../img/PNG/32px/021-video-camera.png" class="icon"></span>Cámara</a></li>
-                        <li><a href="#"><span class="uno"><img src="../img/PNG/32px/039-file-text2.png"
+                                        src="{{url_for('static', filename='img/PNG/32px/021-video-camera.png')}}"
+                                        class="icon"></span>Cámara</a></li>
+                        <li><a href="#"><span class="uno"><img
+                                        src="{{url_for('static', filename='img/PNG/32px/039-file-text2.png')}}"
                                         class="icon"></span>Datos</a></li>
                         <li><a href="categorias/acciones.php"><span class="uno"><img
-                                        src="../img/PNG/32px/086-keyboard.png" class="icon"></span>Acciones</a></li>
-                        <li><a href="/estadisticas"><span class="uno"><img src="../img/PNG/32px/156-stats-dots.png"
+                                        src="{{url_for('static', filename='img/PNG/32px/086-keyboard.png')}}"
+                                        class="icon"></span>Acciones</a></li>
+                        <li><a href="/estadisticas"><span class="uno"><img
+                                        src="{{url_for('static', filename='img/PNG/32px/156-stats-dots.png')}}"
                                         class="icon"></span>Estadísticas</a>
                         </li>
                     </ul>
