--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
 
 
 </div>
-<a class="btn" href="principal"> Acceder</a>
-<a class="btn1" href="/"> Actualizar</a>
+<a class="boton" href="principal"> Acceder</a>
+<a class="boton1" href="/"> Actualizar</a>
 
 
 {% endblock %}
