--- a/static/css/master.css
+++ b/static/css/master.css
@@ -70,7 +70,7 @@ body {
 .login-box a:hover {
    color: #fff;
  }
- .btn{
+ .boton{
 position: fixed;
 bottom: 0;
 right: 0;
@@ -83,13 +83,13 @@ right: 0;
   border-radius: 6px;
   border: 2px solid #0016b0;
  }
- .btn:hover {
+ .boton:hover {
    cursor: pointer;
   color: #18ba20;
   background-color: #ffffff;
 }
 
-.btn1{
+.boton1{
   position: fixed;
   bottom: 0;
   left: 0;
@@ -102,9 +102,14 @@ right: 0;
   border-radius: 6px;
   border: 2px solid #00b009;
 }
-.btn1:hover {
+.boton1:hover {
   cursor: pointer;
   color: #18ba3b;
   background-color: #ffffff;
 }
 
+.btn{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
