--- a/templates/registro.html
+++ b/templates/registro.html
@@ -25,8 +25,8 @@
 
 
 </div>
-<a class="btn" href="principal"> Acceder</a>
-<a class="btn1" href="/"> Actualizar</a>
+<a class="btn btn-primary" href="lista" role="button">Lista de Contactos</a>
+<a class="boton1" href="/"> Actualizar</a>
 
 
 {% endblock %}
