Fin Madrid 9 del 6

--- a/templates/lista.html
+++ b/templates/lista.html
@@ -10,9 +10,9 @@
 {% endif %}
 {% endwith %}
 
-<div class="login-box">
+<div>
 
-<table>
+<table class = "table table-dark">
     <thead>
         <tr>
             <td>Nombre</td>
@@ -21,6 +21,19 @@
             <td>Acciones</td>
         </tr>
     </thead>
+    <tbody>
+        {% for contact in contactos %}
+            <tr>
+                <td>{{contact.1}}</td>
+                <td>{{contact.2}}</td>
+                <td>{{contact.3}}</td>
+                <td>
+                    <a href="/edit/{{contact.0}}">Editar</a>
+                    <a href="/delete/{{contact.0}}">Borrar</a>
+                </td>
+            </tr>
+        {% endfor %}
+    </tbody>
 </table>
 
 </div>
