--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -5,7 +5,7 @@
 <div class="login-box">
     <img src="../static/img/logo.png" class="avatar" alt="Avatar Image">
     <h1>Edición de usuario</h1>
-    <form action="/add_contact" method="POST">
+    <form action="/update/{{contact.0}}" method="POST">
         <input type="text" name="fullname" placeholder="Nombre Completo" value = {{contact.1}}>
         <input type="text" name="phone" placeholder="Nº de Teléfono" value = {{contact.2}}>
         <input type="text" name="email" placeholder="Email" value = {{contact.3}}>
