--- a/templates/registro.html
+++ b/templates/registro.html
@@ -17,9 +17,7 @@
         <input type="text" name="fullname" placeholder="Nombre Completo">
         <input type="text" name="phone" placeholder="Nº de Teléfono">
         <input type="text" name="email" placeholder="Email">
-        <button type="submit">
-            Save
-        </button>
+        <input type="submit" value="Guardar">
 
     </form>
 
