--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -2,21 +2,38 @@
 
 {% block conten %}
 
-<div class="login-box">
-    <img src="../static/img/logo.png" class="avatar" alt="Avatar Image">
-    <h1>Edición de usuario</h1>
-    <form action="/update/{{contact.0}}" method="POST">
-        <input type="text" name="fullname" placeholder="Nombre Completo" value = {{contact.1}}>
-        <input type="text" name="phone" placeholder="Nº de Teléfono" value = {{contact.2}}>
-        <input type="text" name="email" placeholder="Email" value = {{contact.3}}>
-        <button type="submit">
-            Guardar
-        </button>
+<div class="row">
 
-    </form>
-</div> 
+    <div class="col-md-4 offset-md-4">
+        <div class="card card-body">
+            <h1>Edición de usuario</h1>
+            <form action="/update/{{contact.0}}" method="POST">
 
-<a class="btn btn-primary" href="/registro" role="button"> Registrar nuevo contacto</a>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="fullname" placeholder="Nombre Completo"
+                        value={{contact.1}}>
+                </div>
+
+                <div class="form-group">
+                    <input class="form-control" type="text" name="phone" placeholder="Nº de Teléfono"
+                        value={{contact.2}}>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="email" placeholder="Email" value={{contact.3}}>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-success btn-block">Guardar</button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+<a class="boton" href="/registro" role="button"> Registrar nuevo contacto</a>
 
 
 {% endblock %}
