--- a/templates/registro.html
+++ b/templates/registro.html
@@ -10,10 +10,13 @@
 {% endif %}
 {% endwith %}
 
+
+
 <div class="login-box">
     <img src="../static/img/logo.png" class="avatar" alt="Avatar Image">
     <h1>Registro de usuario</h1>
     <form action="/add_contact" method="POST">
+
         <input type="text" name="fullname" placeholder="Nombre Completo">
         <input type="text" name="phone" placeholder="Nº de Teléfono">
         <input type="text" name="email" placeholder="Email">
@@ -23,7 +26,7 @@
 
 
 </div>
-<a class="btn btn-primary" href="lista" role="button">Lista de Contactos</a>
+<a class="boton" href="lista" role="button">Lista de Contactos</a>
 <a class="boton1" href="/"> Actualizar</a>
 
 
