--- a/templates/lista.html
+++ b/templates/lista.html
@@ -37,7 +37,7 @@
                     <td>{{contact.3}}</td>
                     <td>
                         <a href="/edit/{{contact.0}}" class="btn btn-secondary">Editar</a>
-                        <a href="/delete/{{contact.0}}" class="btn btn-danger btn-delete">Borrar</a>
+                        <a href="/delete/{{contact.0}}" class="btn-borrar btn btn-danger">Borrar</a>
                     </td>
                 </tr>
                 {% endfor %}
