--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="{{url_for('static', filename='img/433-github.png')}}" sizes=" 64x64">
 
-    <title>Portal de inicio</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,6 +14,11 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
 
 
+    {%if title%}
+    <title>Inicio - {{ title }}</title>
+    {% else %}
+    <title>Inicio</title>
+    {%endif%}
 
 
 
